<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:scaleType="centerCrop"
        android:src="@drawable/background_resized" />


    <LinearLayout
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/activity_photo_comment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context="com.bitbusters.android.speproject.PhotoCommentActivity"
        android:background="#cc4fc3f7"
        android:elevation="2dp" >

        <android.support.v7.widget.Toolbar
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/colorPrimary"
            android:theme="?attr/actionBarTheme"
            android:id="@+id/dataview_toolbar"
            android:minHeight="?attr/actionBarSize"
            android:weightSum="1" >

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginRight="16dp"
                android:layout_weight="0.88" >

                <ImageButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="?attr/colorPrimary"
                    android:id="@+id/back_button_photo_view"
                    android:clickable="true"
                    android:scaleType="fitCenter"
                    android:layout_gravity="left"
                    android:onClick="backClick"
                    android:padding="10dp"
                    android:src="@drawable/arrow_white" />

                <Button
                    android:text="SUBMIT"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/submit_button"
                    android:layout_alignParentRight="true"
                    android:onClick="submitClick"
                    android:background="#00000000"/>

            </RelativeLayout>

        </android.support.v7.widget.Toolbar>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="32dp" >

            <TextView
                android:text="Comments:"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/textView2"
                android:alpha="1"
                android:textColor="@color/black"

                android:textSize="24sp"
                android:layout_marginBottom="4dp"
                android:textColorLink="@android:color/white" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="10"

                android:background="@android:color/background_light"
                android:paddingTop="10dp" >


            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/imageView2"
                android:layout_weight="4" />


                    <EditText
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:inputType="textMultiLine"
                        android:ems="10"
                        android:layout_weight="6"
                        android:textColor="@color/black"
                        android:scrollbars="vertical"
                        android:id="@+id/editText"
                        android:background="@android:color/background_light"
                        android:gravity="top"
                        android:minLines="12"/>

                 </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="16dp" >

            <TextView
                android:text="Tag: "
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView3"
                android:alpha="1"
                android:textColor="@color/black"
                android:textSize="24sp" />

            <com.bitbusters.android.speproject.MultiSpinner
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/multi_spinner"/>

            <!--<Spinner-->
                <!--android:layout_width="wrap_content"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:id="@+id/spinner" />-->

        </LinearLayout>

    </LinearLayout>

</FrameLayout>