<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <fragment xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:map="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/map"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="com.bitbusters.android.speproject.MapsActivity" />

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/gps_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="100dp"
        android:scaleX="1.2"
        android:scaleY="1.2"
        android:src="@drawable/target_icon"
        android:onClick="currentLocation"/>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/cam_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="20dp"
        android:scaleX="1.2"
        android:scaleY="1.2"
        android:src="@drawable/photo_icon"/>
</FrameLayout>