<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent" >

    <android.support.v7.widget.Toolbar
        style="@style/toolbar_default"
        android:id="@+id/cde_toolbar">

        <ImageButton
            style="@style/back_button"
            android:id="@+id/back_button_cde_data_view"/>

        <TextView
            android:id="@+id/layer_name"
            android:text=""
            android:textSize="@dimen/text_medium"
            android:textStyle="bold"
            android:textColor="@color/colorTextPrimary"
            android:layout_width="wrap_content"
            android:layout_height="?attr/actionBarSize"
            android:ellipsize="end"
            android:maxLines="1"/>

        <Button
            style="@style/info_button"
            android:id="@+id/info_button_cde_data_view"/>

    </android.support.v7.widget.Toolbar>

    <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:clickable="true"
    android:background="@color/backgroundDefault">

        <TextView
            style="@style/text_view_heading"
            android:id="@+id/cde_label"
            android:text=""/>

        <TableLayout
            style="@style/table_layout"
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/cde_table">
        </TableLayout>

    </LinearLayout>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/cde_grid_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="#AA000000"
        android:layout_weight="0.30" />

</LinearLayout>
