<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clickable="true" >

    <android.support.v7.widget.Toolbar
        style="@style/toolbar_default"
        android:id="@+id/cde_details_toolbar">

        <ImageButton
            style="@style/back_button"
            android:id="@+id/back_button_cde_details_view"/>

    </android.support.v7.widget.Toolbar>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:id="@+id/cde_details_linear_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/backgroundDefault"
            android:orientation="vertical"
            android:weightSum="1">

            <TextView
                style="@style/text_view_heading"
                android:id="@+id/cde_details_title"
                android:text=""/>

            <!--<TableLayout-->
                <!--style="@style/table_layout"-->
                <!--xmlns:android="http://schemas.android.com/apk/res/android"-->
                <!--android:id="@+id/cde_waterbody_id_table"-->
                <!--android:stretchColumns="1">-->
                <!--<TableRow>-->
                    <!--<TextView-->
                        <!--style="@style/text_view_table_parent"-->
                        <!--android:id="@+id/cde_waterbody_id_title"-->
                        <!--android:text="@string/cde_waterbody_id_title"-->
                        <!--android:gravity="start"/>-->
                    <!--<TextView-->
                        <!--style="@style/text_view_table_child"-->
                        <!--android:id="@+id/cde_waterbody_id"-->
                        <!--android:gravity="start"/>-->
                <!--</TableRow>-->
            <!--</TableLayout>-->

            <TextView
                style="@style/text_view_sub_heading"
                android:id="@+id/cde_classification_title"
                android:text="@string/cde_classification_title"/>

            <TableLayout
                style="@style/table_layout"
                xmlns:android="http://schemas.android.com/apk/res/android"
                android:id="@+id/cde_details_table">
            </TableLayout>

            <TextView
                style="@style/text_view_sub_heading"
                android:id="@+id/cde_objectives_title"
                android:text="@string/cde_objectives_title"/>

            <TableLayout
                style="@style/table_layout"
                xmlns:android="http://schemas.android.com/apk/res/android"
                android:id="@+id/cde_objectives_table">
            </TableLayout>

            <TextView
                style="@style/text_view_sub_heading"
                android:id="@+id/cde_rnag_title"
                android:text="@string/cde_rnag_title"/>

            <TableLayout
                style="@style/table_layout"
                xmlns:android="http://schemas.android.com/apk/res/android"
                android:id="@+id/cde_rnag_table">
            </TableLayout>

            <android.support.v7.widget.AppCompatButton
                style="@style/full_report_button"
                android:id="@+id/cde_full_report_button" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>