...

    <string name="my_area_unable_to_find_waterbody">You are currently not inside a registered river catchment</string>

    <string name="google_search_back_button">Navigate up</string>
    <string name="google_search_cancel_button">Clear search</string>
    <string name="google_search_input_field_holder">Search</string>
    <string name="google_map">Google Map</string>

    <string name="dialog_title">Search Condition</string>
    <string name="dialog_description">Search by any of the following:</string>

    <string name="dialog_region">Region Name</string>
    <string name="dialog_city">City Name</string>
...
